feat: styling category section

--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
         </section>
 
         <section class="categorias">
-            <h2 class="categorias__titulo">Categorias</h2>
-            <ul class="categorias__lista">
-                <li class="categorias__item">Shows</li>
-                <li class="categorias__item">Teatro</li>
-                <li class="categorias__item">Festivais</li>
-                <li class="categorias__item">Cinema</li>
-                <li class="categorias__item">Arte</li>
-                <li class="categorias__item">Fotografia</li>
-                <li class="categorias__item">Tecnologia</li>
-                <li class="categorias__item">Design</li>
-            </ul>
+            <div class="categorias__container">
+                <h2 class="categorias__titulo">Categorias</h2>
+                <ul class="categorias__lista">
+                    <li class="categorias__item">Shows</li>
+                    <li class="categorias__item">Teatro</li>
+                    <li class="categorias__item">Festivais</li>
+                    <li class="categorias__item">Cinema</li>
+                    <li class="categorias__item">Arte</li>
+                    <li class="categorias__item">Fotografia</li>
+                    <li class="categorias__item">Tecnologia</li>
+                    <li class="categorias__item">Design</li>
+                </ul>
+            </div>
             <div class="categorias__destaques">
                 <div class="destaques">
                     <h3 class="destaques__titulo">Destaques:</h3>
@@ -65,8 +67,8 @@
                         <img src="./assets/img/icone-seta-avancar.png">
                     </div>
                 </div>
+                <div class="categorias__imagem"></div>
             </div>
-            <div class="categorias__imagem"></div>
         </section>
 
         <section class="eventos">
